clim spec: add back epsf figures, changes to TeX files to go through a modern LaTeX, remove some symbolics font codes

--- a/specs/bboxes.tex
+++ b/specs/bboxes.tex
@@ -34,7 +34,7 @@ transformations, it does not hold.
 \end{verbatim}
 
 \begin{figure}
-\ifpsfig\centerline{\psfig{figure=bounding-box.ps}}\else\vspace{2.0in}\fi
+\centerline{\epsfig{file=bounding-box.epsi}}
 \caption{\label{output-record-bbox} The bounding rectangle of an output record.}
 \end{figure}
 
