--- a/specs/changes.tex
+++ b/specs/changes.tex
@@ -280,7 +280,7 @@ remain as a compatibility function that takes a single root object.
 conventions.  A compatibility function will be provided.
 
 \item All of the clause arglists for \cl{tracking-pointer} are specified with
-{\tt\&key\}, that is, they are named arguments rather than positional ones.
+{\tt\&key}, that is, they are named arguments rather than positional ones.
 This should not cause any problems, except for the one case that the
 \arg{character} argument to the \cl{:keyboard} clause has been renamed to
 \arg{gesture}.
