--- a/specs/designs.tex
+++ b/specs/designs.tex
@@ -216,7 +216,7 @@ Figure~\ref{design-classes} shows how the design and region classes relate to
 each other.
 
 \begin{figure}
-\ifpsfig\centerline{\psfig{figure=design-classes.ps}}\else\vspace{4.0in}\fi
+\centerline{\epsfig{file=design-classes.epsi}}
 \caption{\label{design-classes} The class structure for all designs and regions.
 Entries in bold correspond to real CLIM classes.}
 \end{figure}
