--- a/specs/frames.tex
+++ b/specs/frames.tex
@@ -646,7 +646,7 @@ region specified by the region \arg{region}, which defaults to viewport of
 
 \Defgeneric {notify-user} {frame message
                            \key associated-window title documentation
-                                exit-boxes name style text-style
+                                exit-boxes name style text-style}
 
 Notifies the user of some event on behalf of the \term{frame} \arg{frame}.
 \arg{message} is a message string.  This function provides a look and feel
