--- a/specs/graph-formatting.tex
+++ b/specs/graph-formatting.tex
@@ -31,7 +31,7 @@ following code produces the graph shown in Figure~\ref{graph-example}.
 \end{verbatim}
 
 \begin{figure}
-\ifpsfig\centerline{\psfig{figure=graph-example.ps}}\else\vspace{1.75in}\fi
+\centerline{\epsfig{file=graph-example.epsi}}
 \caption{\label{graph-example} Example of graph formatting.}
 \end{figure}
 
