--- a/specs/bordered-output.tex
+++ b/specs/bordered-output.tex
@@ -25,7 +25,7 @@ rectangular, highlighted with a dropshadow, and underlined, respectively.
 \end{verbatim}
 
 \begin{figure}
-\ifpsfig\centerline{\psfig{figure=border-example.ps}}\else\vspace{1.50in}\fi
+\centerline{\epsfig{file=border-example.epsi}}
 \caption{\label{border-example} Examples of bordered output.}
 \end{figure}
 
