--- a/specs/drawing-options.tex
+++ b/specs/drawing-options.tex
@@ -486,7 +486,7 @@ default is \cl{:miter}.  Note that the joint shape is implemented by the host
 window system, so not all platforms will necessarily fully support it.
 
 \begin{figure}
-\ifpsfig\centerline{\psfig{figure=line-joint-shapes.ps}}\else\vspace{1.25in}\fi
+\centerline{\epsfig{file=line-joint-shapes.epsi}}
 \caption{Line joint shapes.}
 \end{figure}
 
@@ -499,7 +499,7 @@ is \cl{:butt}.  Note that the cap shape is implemented by the host window
 system, so not all platforms will necessarily fully support it.
 
 \begin{figure}
-\ifpsfig\centerline{\psfig{figure=line-cap-shapes.ps}}\else\vspace{1.75in}\fi
+\centerline{\epsfig{file=line-cap-shapes.epsi}}
 \caption{Line cap shapes.}
 \end{figure}
 
