--- a/specs/regions.tex
+++ b/specs/regions.tex
@@ -267,7 +267,7 @@ be either a \term{region set} or a ``simple'' region, in which case
 
 
 \begin{figure}
-\ifpsfig\centerline{\psfig{figure=region-normalization.ps}}\else\vspace{3.25in}\fi
+\centerline{\epsfig{file=region-normalization.epsi}}
 \caption{Normalization of rectangular region sets.}
 \end{figure}
 
@@ -319,7 +319,7 @@ member of the class \cl{standard-region-difference}.
 
 
 \begin{figure}
-\ifpsfig\centerline{\psfig{figure=region-composition.ps}}\else\vspace{2.0in}\fi
+\centerline{\epsfig{file=region-composition.epsi}}
 \caption{Examples of region union, intersection, and difference.}
 \end{figure}
 
@@ -352,7 +352,7 @@ classes internally, and to move the implementation of the extended region
 classes to a separately loadable module (via \cl{provide} and \cl{require}).}
 
 \begin{figure}
-\ifpsfig\centerline{\psfig{figure=region-structure.ps}}\else\vspace{2.0in}\fi
+\centerline{\epsfig{file=region-structure.epsi}}
 \caption{The class structure for all regions.}
 \end{figure}
 
@@ -721,7 +721,7 @@ parallelogram is bound to be a rectangle---the vectors will be perpendicular
 and correspond to the semi-axes of the ellipse.
 
 \begin{figure}
-\ifpsfig\centerline{\psfig{figure=different-ellipses.ps}}\else\vspace{1.5in}\fi
+\centerline{\epsfig{file=different-ellipses.epsi}}
 \caption{Different vectors may specify the same ellipse.}
 \end{figure}
 
