--- a/specs/table-formatting.tex
+++ b/specs/table-formatting.tex
@@ -29,7 +29,7 @@ Figure~\ref{table-example}.
 \end{verbatim}
 
 \begin{figure}
-\ifpsfig\centerline{\psfig{figure=table-example.ps}}\else\vspace{2.25in}\fi
+\centerline{\epsfig{file=table-example.epsi}}
 \caption{\label{table-example} Example of tabular output.}
 \end{figure}
 
