commented pdf / hypertex stuff as I'm not sure if it's general.

--- a/specs/clim.tex
+++ b/specs/clim.tex
@@ -20,14 +20,14 @@
 %\usepackage{times}
 
 %% For PDF
-\renewcommand{\rmdefault}{phv}
-\renewcommand{\sfdefault}{phv}
-\renewcommand{\ttdefault}{pcr}
-\usepackage[ps2pdf,
-  pdftitle={CLIM II Specification},
-  pdfauthor={various},
-  colorlinks=true,linkcolor=blue,pagecolor=blue,
-  pdfstartview=FitBV,pdfview=FitBV]{hyperref}
+%\renewcommand{\rmdefault}{phv}
+%\renewcommand{\sfdefault}{phv}
+%\renewcommand{\ttdefault}{pcr}
+%\usepackage[ps2pdf,hyperindex,hypertex,
+%  pdftitle={CLIM II Specification},
+%  pdfauthor={various},
+%  colorlinks=true,linkcolor=blue,pagecolor=blue,
+%  pdfstartview=FitBV,pdfview=FitBV]{hyperref}
 %% end PDF
 
 
